# sara

./: .gitignore  README.md  insights.md  pyproject.toml
alts/: percipia_khysanth.md  sara_commercial.md  sara_data_engineer.md
reviews/: lester.md  louise_gluck_data_eng.md
stellarium/: observingList.json  observingList_Sara bodies of interest.sol
